Nuevo archivo modificado

--- a/algoritmo_decision.ipynb
+++ b/algoritmo_decision.ipynb
@@ -26,7 +26,16 @@
    "metadata": {},
    "source": [
     "Se genera un lista con opciones de turismo y etiquetas.\n",
-    "Se muestran $n=60$ opciones repartidas en tres categorías"
+    "Se muestran $n=60$ opciones repartidas en tres categorías\n",
+    "\n",
+    "$$n1 + n2 + n3 = N$$\n",
+    "Primer elección n1, entonces se define un número entero como:\n",
+    "$$f = int(0.1*min(n1 + n2, n1 + n3, n2 + n3))$$\n",
+    "y se actualizan los datos como:\n",
+    "$$n1 = n1 + 2f$$\n",
+    "$$n2 = n2 - f$$\n",
+    "$$n3 = n3 - f$$\n",
+    "La suma siempre será N, y se impone la condición de que al ser uno de ellos negativo, se define como cero."
    ]
   },
   {
